feat: overlay animation added when loading

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <body>
             <div class="container">
                 <div class="weather-side">
+
                     <div class="weather-gradient"></div>
                     <div class="date-container">
                         <h2 id="date-dayname" class="date-dayname">---</h2><span id="date-day" class="date-day">--</span><span id="location-text" class="location">-</span>
@@ -16,6 +17,13 @@
                         <h1 id="weather-temp" class="weather-temp">--</h1>
                         <h3 id="weather-desc" class="weather-desc">-</h3>
                     </div>
+                <div id="overlay" class="overlay">
+                    <div style="--i: 1"></div>
+      <div style="--i: 2"></div>
+      <div style="--i: 3"></div>
+      <div style="--i: 4"></div>
+                </div>
+
                 </div>
                 <div class="info-side">
                     <div class="today-info-container">
@@ -44,6 +52,7 @@
     </div>
     <script src="index.js">
     </script>
+    
 </body>
 
 </html>
